[CRNT-39599] : Minor formatting change restricting date from wrapping. Bug :CRNT-39599

--- a/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
+++ b/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
@@ -270,6 +270,7 @@ padding : 5px;;
 .tma-row {
 	padding-top: 3px;
 	padding-left: 5px;
+  white-space: nowrap;
 }
 
 .tma-input {
